# daytradingbot.net

./: .env.example  .gitignore  404.html  CNAME  Cargo.toml  README.md  design-qa.md  index.html  package.json  pnpm-lock.yaml  robots.txt  sitemap.xml  version.json
.cargo/: config.toml
answers/: index.html
answers/are-trading-bots-legal-in-the-us/: index.html
answers/can-a-trading-bot-promise-results/: index.html
answers/how-do-trading-bot-scams-work/: index.html
answers/how-do-trading-bot-vendors-charge/: index.html
answers/how-to-verify-a-trading-bots-track-record/: index.html
answers/is-a-trading-bot-the-same-as-financial-advice/: index.html
answers/is-an-ai-trading-bot-safe/: index.html
answers/robinhood-agentic-trading-api-explained/: index.html
answers/should-a-trading-bot-have-its-own-account/: index.html
answers/what-is-a-kill-switch-in-automated-trading/: index.html
answers/what-is-a-public-trade-tape/: index.html
answers/what-is-paper-trading-mode/: index.html
api/: fundmanager-data
app/: index.html
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: apply-mysql-migration.ts  commerce-mysql.ts  commerce.test.ts  commerce.ts  config.ts  index.ts  licensing-mysql.ts  licensing.test.ts  licensing.ts  policy.ts  provision-owner-license.ts  robinhood-web.test.ts  robinhood-web.ts  run-worker.ts  server.test.ts  server.ts  verify-mysql-commercial.ts  webapp-cycle.test.ts  webapp.test.ts  webapp.ts
apps/desktop/: THIRD_PARTY_NOTICES.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.render.test.tsx  App.test.ts  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.owner-demo.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: direct_kalshi_canary.rs  import_direct_kalshi.rs  import_owner_demo.rs  import_robinhood_owner.rs  native_robinhood_practice.rs
apps/desktop/src-tauri/src/: agent_catalog.rs  bluechip_runtime.rs  customer_connections.rs  lib.rs  license_activation.rs  main.rs  owner_engine.rs  robinhood_connection.rs  vault.rs
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  LegalPage.tsx  Onboarding.tsx  WebApp.tsx  Welcome.tsx  main.tsx  matching.test.ts  matching.ts  siteConfig.ts  styles.css  webapp-contract.test.ts  webapp.css
assets/: AlarmClock-03lQkYdP.js  AlarmClock-2bdLjs7h.js  AlarmClock-B1HQ5P7F.js  AlarmClock-BGUCwJNy.js  AlarmClock-BmBRuyNd.js  AlarmClock-Bn2OWvL0.js  AlarmClock-CB_7aC4a.js  AlarmClock-CPshVqih.js  AlarmClock-CXEIux3N.js  AlarmClock-Cao_2WtL.js  AlarmClock-CrJAxGNZ.js  AlarmClock-DDlYSQBx.js  AlarmClock-DKj1HCg2.js  AlarmClock-DLYhjUnR.js  AlarmClock-Dk1l6pjl.js  AlarmClock-DoHZyTFy.js  AlarmClock-J_Hsurim.js  AlarmClock-pjCNx4gh.js  App-B3XkXAUi.js  App-B4T4mwUY.js  App-BGZcqlnw.js  App-BHQHqy2M.js  App-BYj8MrEl.js  App-BZLowfJa.js  App-BzDwU53u.js  App-CTRtasCY.js  App-DDo0Frnp.js  App-DTrGFgnV.js  App-DUy5mVaZ.js  App-DWAvQ8IZ.js  App-Dl7YMD8b.js  App-DnhCGjQ9.js  App-W5Sdnurx.js  App-iwy4VgGI.js  App-kgIJ81Ds.js  App-yD9XakHV.js  AppBuilderStudio-5OYeVm-I.js  AppBuilderStudio-B7oDNeup.js  AppBuilderStudio-BfdbOkz8.js  AppBuilderStudio-C0zGTM8B.js  (+812 more)
bluechip/: index.html
content/: answers.json
crates/contracts/: Cargo.toml
crates/contracts/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: intent_identity.rs  lib.rs  order_lifecycle.rs  risk.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs  schema.sql
crates/licensing/: Cargo.toml
crates/licensing/src/: lib.rs
crates/release/: Cargo.toml
crates/release/src/: lib.rs
crates/venues/: Cargo.toml
crates/venues/examples/: robinhood_owner_probe.rs
crates/venues/src/: coinbase.rs  kalshi.rs  lib.rs  polymarket_us.rs  robinhood.rs  simmer.rs
data/: activity-feed.json  cron-status.json  eb28-blog-feed.json  fundmanager-public.json  mission-dashboard.json  tape-days.json  weekly-recaps.json
database/migrations/: 0001_commerce_and_licensing.sql  0002_automatic_fulfillment.sql
database/mysql/: 0001_commercial_schema.sql  0002_web_app.sql  0003_web_worker_status.sql
deploy/namecheap/api/: 0002_web_sessions_only.sql  0003_remove_shared_host_trading.sql  README.md  recover-api-health.sh  run-web-worker-with-recovery.sh
deploy/namecheap/nginx/: daytradingbot-acme-bootstrap.conf  daytradingbot.conf
deploy/namecheap/releases/: .htaccess  index.html
deploy/namecheap/systemd/: daytradingbot-api.service
deskos/: index.html
docs/: hosting-namecheap-vps-fallback.md  hosting-namecheap.md  namecheap-account-audit.md
fundmanager/: index.html
get-started/: index.html
ops/launchd/: net.daytradingbot.answers.nightly.plist  net.daytradingbot.tape.daily.plist  net.daytradingbot.weekly.plist
privacy/: index.html
risk-disclosure/: index.html
runtime/: agents.json
scripts/: build-namecheap-api-package.mjs  build-owner-demo-macos.sh  build-release-macos.sh  compliance_lint.py  eb28_growth_lib.py  generate-answers-hub.py  generate-tape-daily.py  generate-weekly-recap.py  publish-web-root.mjs
setup/: index.html
tape/: index.html
tape/2026-06-12/: index.html
tape/2026-06-16/: index.html
tape/2026-06-17/: index.html
tape/2026-06-23/: index.html
tape/2026-06-24/: index.html
tape/2026-06-25/: index.html
tape/2026-06-26/: index.html
tape/2026-06-29/: index.html
tape/2026-06-30/: index.html
tape/2026-07-01/: index.html
tape/2026-07-02/: index.html
tape/2026-07-06/: index.html
tape/2026-07-07/: index.html
tape/2026-07-09/: index.html
tape/2026-07-10/: index.html
terms/: index.html
weekly/: index.html
weekly/2026-07-05/: index.html
weekly/2026-07-12/: index.html
welcome/: index.html
