[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/contracts",
  "crates/core",
  "crates/ledger",
  "crates/licensing",
  "crates/release",
  "crates/venues",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"
rust-version = "1.97"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
ed25519-dalek = "2.2.0"
rust_decimal = { version = "1.40.0", features = ["serde-with-str"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.20.0", features = ["serde", "v4", "v5"] }
zeroize = "1.8.2"
