[package]
name = "daytradingbot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
daytradingbot-contracts = { path = "../contracts" }
rust_decimal.workspace = true
thiserror.workspace = true
uuid.workspace = true
