[package]
name = "daytradingbot-licensing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
owner-demo-license = []

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
