[package]
name = "daytradingbot-venues"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
daytradingbot-contracts = { path = "../contracts" }
daytradingbot-ledger = { path = "../ledger" }
rust_decimal.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
