[package]
name = "daytradingbot-desktop"
autobins = false
default-run = "daytradingbot-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DayTradingBot local trading and risk-control desktop application"

[features]
default = []
owner-tools = []
owner-demo-license = ["daytradingbot-licensing/owner-demo-license", "dep:subtle"]

[[bin]]
name = "daytradingbot-desktop"
path = "src/main.rs"

[[bin]]
name = "owner_connection_probe"
path = "src/bin/owner_connection_probe.rs"
required-features = ["owner-tools"]

[[bin]]
name = "owner_vault_import"
path = "src/bin/owner_vault_import.rs"
required-features = ["owner-tools"]

[lib]
name = "daytradingbot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
daytradingbot-contracts = { path = "../../../crates/contracts" }
daytradingbot-core = { path = "../../../crates/core" }
daytradingbot-ledger = { path = "../../../crates/ledger" }
daytradingbot-licensing = { path = "../../../crates/licensing" }
daytradingbot-release = { path = "../../../crates/release" }
daytradingbot-venues = { path = "../../../crates/venues" }
ed25519-dalek.workspace = true
keyring = "4.1.4"
plist = "1.10.0"
reqwest.workspace = true
ring.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle = { workspace = true, optional = true }
tauri = { version = "2.11.5", features = [] }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
url = "2.5.8"
zeroize.workspace = true
